--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "next": "16.0.1",
+    "framer-motion": "^12.23.24",
+    "next": "^16.0.1",
     "nodemailer": "^7.0.10",
     "react": "19.2.0",
     "react-dom": "19.2.0",
